--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "syllabus_phil105"]
 	path = syllabus_phil105
 	url = https://github.com/mclear-teaching-projects/syllabus_template.git
+    ignore = dirty 
