update ignore and submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "syllabus_phil105"]
-	path = syllabus_phil105
-	url = https://github.com/mclear-teaching-projects/syllabus_template.git
-    ignore = dirty 
-
-[submodule "pelican-bootstrap3"]
-	path = pelican-bootstrap3
-	url = https://github.com/mclear-teaching-projects/phil105/pelican-bootstrap3.git
-    ignore = dirty 
+[submodule "themes/bootstrap-premium"]
+	path = themes/bootstrap-premium
+	url = https://github.com/appernetic/hugo-bootstrap-premium.git
