--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
+/README.md
+
+# Created by https://www.gitignore.io/api/macos
+
+### macOS ###
+# General
 .DS_Store
-Syllabus_Intro/
-output/
-*.pyc
-*~undo-tree~
-test*
-UNL iclicker Bb-7.6.2-mac/
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+# End of https://www.gitignore.io/api/macos
+
+# Created by https://www.gitignore.io/api/hugo
+
+### Hugo ###
+# Hugo binary
+hugo*
+
+# Generated files at default location
+/public/
+/resources/_gen
+
+
+# End of https://www.gitignore.io/api/hugo
