--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/bootstrap-premium"]
 	path = themes/bootstrap-premium
 	url = https://github.com/appernetic/hugo-bootstrap-premium.git
+[submodule "syllabus-phil105"]
+	path = syllabus-phil105
+	url = https://github.com/mclear-teaching-projects/philfood-syllabus.git
